--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Tiro+Bangla&display=swap');
+
 .site-header-container {
   display: flex;
   flex-direction: column;
