--- a/layouts/_partials/custom-styles.html
+++ b/layouts/_partials/custom-styles.html
@@ -4,6 +4,9 @@
   html[lang="bn"] main article {
     font-family: "Tiro Bangla", serif !important;
     font-size: 14px !important;
-    text-align: justify;
   }
+
+  html main article {
+    text-align: justify;
+  }  
 </style>
